fixed the theme toggle, added scrollbar effects

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,70 @@
-html, body {
-    background-color: var(--background-color);
+:root {
+    --light-background-color: #F5F5F5;
+    --foreground-color: #FCA311;
+    --primary-text-color: #0a0a0a;
+    --secondary-text-color: #ffffff;
+    --toggle-bg: #f0eb9d;
+    --toggle-fg: #ffd000;
 }
-html, body[data-theme="dark"] {
-    background-color: var(--background-color);
+[data-theme="dark"] {
+    --background-color: #1C1C1C;
+    --foreground-color: #567aff;
+    --primary-text-color: #f6f6f6;
+    --secondary-text-color: #0a0a0a;
+    --toggle-bg: #283452;
+    --toggle-bg: #00a6ff;
 }
+html[data-theme="dark"], body[data-theme="dark"] {
+    background-color: var(--background-color);
+    color: var(--primary-text-color);
+}
+[data-theme="dark"] #navButtons #themeButton,
+[data-theme="dark"] .nav-item {
+    background-color: var(--foreground-color);
+    color: var(--primary-text-color);
+}
+.navbar-brand,
+.nav-item,
+.pointCardBodyItem,
+.xp,
+.projectCardItem,
+#projectsHeader,
+#typewriterContainer,
+#typewriterContainer2,
+#aboutTextContainer {
+    color: var(--primary-text-color) !important;
+}
+::selection {
+    background-color: #FCA311; /* Highlight background color */
+    color: #0a0a0a; /* Highlighted text color */
+}
+#container {
+    min-height: 100vh; /* Ensures it stretches to at least full viewport height */
+    display: flex;
+    flex-direction: column;
+    background-color: inherit; /* Inherits from body */
+}
+/* Scrollbar */
+
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+}
+/* ::-webkit-scrollbar-track {
+    background-color: #1C1C1C;
+} */
+[data-theme="dark"]::-webkit-scrollbar-track {
+    background-color: #1C1C1C;
+}
+/* Handle (the draggable part) */
+::-webkit-scrollbar-thumb {
+    background: #5679FB;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #0026b3; /* Darker blue */
+}
+
 /* ThemeToggle */
 #container, #totalContainer{
     background-color: var(--background-color);
@@ -17,14 +78,15 @@ html, body[data-theme="dark"] {
 }
 /* Navbar */
 #navButtons {
-    background-color: #343a40;
+    background-color: var(--foreground-color);
+    color: var(--secondary-text-color);
     border-radius: 10px;
 }
 .navbar-collapse {
     text-align: center;
 }
 #themeButton {
-    background-color: #343a40;
+    background-color: var(--foreground-color);
     border-radius: 10px;
     color: white;
 }
@@ -34,30 +96,28 @@ html, body[data-theme="dark"] {
     transition: all .5s;
 }
 .barNav a:hover {
-    color: #000000;
+    color: #1C1C1C;
 }
 .barNav a {
+    display: inline-block;
     position:relative;
     z-index: 1;
     color: white;
-}
-.barNav a:hover {
-    color: #91640F;
+    overflow: hidden;
+    border-radius: 10px;
 }
 .barNav a:after {
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
     margin: auto;
     width: 100%;
-    height: 1px;
-    content: '.';
+    height: 100%;
+    content: '';
     color: transparent;
     background: #FCA311;
-    visibility: none;
+    visibility: hidden;
     opacity: 0;
     z-index: -1;
 }
@@ -66,10 +126,20 @@ html, body[data-theme="dark"] {
     visibility: visible;
     height: 100%;
 }
+.nav-item {
+    position: relative;
+    border: 2px solid transparent;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 5px rgba(255, 0, 0, 0);
+}
+.nav-item:hover {
+    border-color: #FCA311;
+    box-shadow: 0px 0px 15px rgb(255, 171, 16);
+}
 #themeButton a,
 #themeButton:after,
 #themeButton:before {
-    transition: all .5s;
+    transition: all .6s;
 }
 #themeButton:hover {
     color: #000000;
@@ -77,25 +147,21 @@ html, body[data-theme="dark"] {
 #themeButton {
     position:relative;
     z-index: 1;
-    color: white;
-}
-#themeButton:hover {
-    color: #91640F;
+    /* color: white; */
 }
 #themeButton:after {
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
     margin: auto;
     width: 100%;
-    height: 1px;
-    content: '.';
+    height: 100%;
+    content: '';
     color: transparent;
     background: #FCA311;
-    visibility: none;
+    border-radius: 10px;
+    visibility: hidden;
     opacity: 0;
     z-index: -1;
 }
@@ -131,6 +197,15 @@ html, body[data-theme="dark"] {
     border-radius: 50px;
     font-size: 1.4rem;
     padding: 10px 12px;
+}
+#typewriterContainer2 {
+    max-width: 800px;
+}
+#typewriterContainer2 p {
+    font-size: 1.2em;
+}
+.link-button > #contactButton {
+    font-size: 1.1em;
 }
 /* About */
 #aboutContainer {
@@ -170,6 +245,16 @@ html, body[data-theme="dark"] {
 #thirdPointContainer:hover {
     /* change the color and add hover animation(reference notion notes, there's a hover effect tip in HTML/CSS page) */
     background-color: #ab0bcfad;
+}
+.pointCard {
+    position: relative;
+    border: 2px solid transparent;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 5px rgba(255, 0, 0, 0);
+}
+.pointCard:hover {
+    border-color: #FCA311;
+    box-shadow: 0px 0px 15px rgb(255, 171, 16);
 }
 /* Experience */
 @keyframes slide {
@@ -257,7 +342,6 @@ html, body[data-theme="dark"] {
     transition: all 0.2s ease-in-out;
     box-shadow: 0px 0px 5px rgba(255, 0, 0, 0);
 }
-
 .projectCard:hover {
     border-color: #FCA311;
     box-shadow: 0px 0px 15px rgb(255, 171, 16);
