--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-:root {
+/* :root {
     --background-color: #F5F5F5;
-    --foreground-color: #003cff;
+    --foreground-color: #FCA311;
     --primary-text-color: #0a0a0a;
     --secondary-text-color: #ffffff;
     --toggle-bg: #f0eb9d;
@@ -14,4 +14,4 @@
     --secondary-text-color: #0a0a0a;
     --toggle-bg: #283452;
     --toggle-bg: #00a6ff;
-}
+} */
